--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,6 +9,7 @@
 
 
     <Button
+        android:id="@+id/buttonStart"
         android:layout_width="250dp"
         android:layout_height="250dp"
         android:background="@drawable/button_layout_1"
