--- a/app/src/main/res/navigation/navigator1.xml
+++ b/app/src/main/res/navigation/navigator1.xml
@@ -36,5 +36,25 @@
         android:id="@+id/homeFragment"
         android:name="com.example.magarusapp.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_homeFragment_to_nameUsersFragment2"
+            app:destination="@id/nameUsersFragment"
+            app:popUpTo="@id/homeFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/nameUsersFragment"
+        android:name="com.example.magarusapp.NameUsersFragment"
+        android:label="fragment_name_users"
+        tools:layout="@layout/fragment_name_users" >
+        <action
+            android:id="@+id/action_nameUsersFragment_to_inviteFragment2"
+            app:destination="@id/inviteFragment2" />
+    </fragment>
+    <fragment
+        android:id="@+id/inviteFragment2"
+        android:name="com.example.magarusapp.InviteFragment"
+        android:label="fragment_invite"
+        tools:layout="@layout/fragment_invite" />
 </navigation>
