--- a/app/src/main/res/drawable/button_layout_1.xml
+++ b/app/src/main/res/drawable/button_layout_1.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <stroke android:color="@color/teal_200" android:width="5dp"/>
+    <stroke android:color="@color/black" android:width="1dp"/>
     <corners android:radius="999dp"/>
 
 </shape>
