--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,21 +5,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background2"
     tools:context=".HomeFragment">
 
 
+    <TextView
+        android:id="@+id/textProfile"
+        android:layout_width="300dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="72dp"
+        android:gravity="center_horizontal"
+        android:text="Home"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="60sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
+        android:id="@+id/buttonInviteFragment"
         android:layout_width="250dp"
-        android:layout_height="250dp"
+        android:layout_height="60dp"
         android:background="@drawable/button_layout_1"
-        android:text="Start"
-        android:textColor="@color/teal_200"
+        android:text="Invite a Donkey"
         android:textAllCaps="false"
-        android:textSize="30sp"
-        android:textStyle="bold"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textProfile" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
