--- a/app/src/main/res/layout/fragment_screen1.xml
+++ b/app/src/main/res/layout/fragment_screen1.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background2"
     tools:context=".onboarding.screens.Screen1">
 
 
@@ -34,7 +35,7 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="300dp"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:text="@string/screen1"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,7 +54,7 @@
         android:layout_marginRight="40dp"
         android:text="Eh"
         android:textStyle="bold"
-        android:textColor="@color/teal_200"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
