--- a/app/src/main/res/layout/fragment_screen2.xml
+++ b/app/src/main/res/layout/fragment_screen2.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background2"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".onboarding.screens.Screen2">
 
@@ -32,7 +34,7 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="300dp"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:text="@string/screen2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,7 +53,7 @@
         android:layout_marginRight="40dp"
         android:text="Mmm"
         android:textStyle="bold"
-        android:textColor="@color/teal_200"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
