--- a/app/src/main/res/layout/fragment_screen3.xml
+++ b/app/src/main/res/layout/fragment_screen3.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/background2"
     tools:context=".onboarding.screens.Screen3">
 
     <ImageView
@@ -32,7 +33,7 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="300dp"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:text="@string/screen3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,7 +52,7 @@
         android:layout_marginRight="40dp"
         android:text="Yep"
         android:textStyle="bold"
-        android:textColor="@color/teal_200"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
