--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -1,32 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/motionLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/black"
     tools:context=".SplashFragment">
 
     <!-- TODO: Update blank fragment layout -->
+
+
     <ImageView
-        android:id="@+id/fagiano"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:src="@drawable/fagiano"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="150dp"/>
-
-    <TextView
-        android:layout_width="300dp"
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Magarus"
-        android:layout_below="@+id/fagiano"
-        android:layout_centerHorizontal="true"
-        android:textAlignment="center"
-        android:gravity="center_horizontal"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:textColor="@color/dark_grey"/>
+        android:src="@drawable/logo3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
+    <!--    <ImageView-->
+    <!--        android:id="@+id/fagiano"-->
+    <!--        android:layout_width="200dp"-->
+    <!--        android:layout_height="200dp"-->
+    <!--        android:src="@drawable/fagiano"-->
+    <!--        android:layout_centerHorizontal="true"-->
+    <!--        android:layout_marginTop="150dp"/>-->
 
-</RelativeLayout>
+
+    <!--    <TextView-->
+    <!--        android:layout_width="300dp"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:text="Magarus"-->
+    <!--        android:layout_below="@+id/fagiano"-->
+    <!--        android:layout_centerHorizontal="true"-->
+    <!--        android:textAlignment="center"-->
+    <!--        android:gravity="center_horizontal"-->
+    <!--        android:textSize="20sp"-->
+    <!--        android:textStyle="bold"-->
+    <!--        android:textColor="@color/dark_grey"/>-->
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
