--- a/app/src/main/res/layout/fragment_ask_user.xml
+++ b/app/src/main/res/layout/fragment_ask_user.xml
@@ -17,7 +17,7 @@
         android:drawableStart="@drawable/ic_fagian_notification"
         android:drawableLeft="@drawable/ic_fagian_notification"
         android:drawablePadding="12dp"
-        android:hint="Invite User"
+        android:hint="Scrivi qualcosa a Bono"
         android:paddingStart="20dp"
         android:paddingLeft="12dp"
         android:paddingEnd="12dp"
@@ -38,7 +38,7 @@
         android:layout_width="200dp"
         android:layout_height="60dp"
         android:layout_marginTop="72dp"
-        android:text="Send"
+        android:text="Invia richiesta"
         android:textAllCaps="false"
         android:background="@drawable/button_layout_1"
         android:textColor="@color/black"
