--- a/app/src/main/res/layout/fragment_count.xml
+++ b/app/src/main/res/layout/fragment_count.xml
@@ -11,7 +11,8 @@
        android:id="@+id/countButton"
        android:layout_width="200dp"
        android:layout_height="200dp"
-       android:text="10"
+       android:text="Aspe"
+       android:textAllCaps="false"
        android:background="@drawable/button_layout_1"
        android:layout_centerInParent="true"/>
 
