--- a/app/src/main/res/layout/fragment_finish_first_play.xml
+++ b/app/src/main/res/layout/fragment_finish_first_play.xml
@@ -12,7 +12,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:text="THE WINNER IS UGO"
-        style="@style/MaterialAlertDialog.MaterialComponents.Title.Text.CenterStacked"
+        android:textColor="@color/fra_red"
         android:textSize="30sp"
         android:layout_centerInParent="true"/>
 
