--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background2"
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
     tools:context=".HomeFragment">
 
 
@@ -13,27 +15,33 @@
         android:id="@+id/textProfile"
         android:layout_width="300dp"
         android:layout_height="100dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="40dp"
         android:gravity="center_horizontal"
         android:text="Home"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="60sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textSize="60sp" />
 
 
-    <ImageView
+    <TextView
+        android:id="@+id/pointText"
+        android:layout_width="200dp"
+        android:layout_height="60dp"
+        android:text="Punti: 0"
+        android:textSize="30sp"
+        android:textAlignment="center"
+        android:layout_gravity="center" />
+
+
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/imageProfile"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:src="@drawable/bono"
-        app:layout_constraintBottom_toTopOf="@+id/buttonInviteFragment"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textProfile" />
+        app:civ_border_width="2dp"
+        app:civ_border_color="@color/black"/>
 
 
     <Button
@@ -42,13 +50,10 @@
         android:layout_height="60dp"
         android:layout_marginBottom="116dp"
         android:background="@drawable/button_layout_1"
-        android:text="Invite a Donkey"
+        android:text="Invita un asino"
         android:textAllCaps="false"
         android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_marginTop="20dp"/>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
