--- a/app/src/main/res/layout/fragment_name.xml
+++ b/app/src/main/res/layout/fragment_name.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background2"
-    tools:context=".onboarding.screens.Screen5">
+    tools:context=".NameFragment">
 
 
     <EditText
@@ -16,7 +16,7 @@
         android:background="@drawable/button_layout_1"
         android:drawableStart="@drawable/ic_fagian_notification"
         android:drawablePadding="12dp"
-        android:hint="Type your name"
+        android:hint="Scrivi il tuo nome"
         android:paddingStart="12dp"
         android:paddingLeft="12dp"
         android:textColor="@android:color/darker_gray"
